--- a/collect-infor-admin/index.html
+++ b/collect-infor-admin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./src//assets/kg.ico">
+    <link rel="icon" href="./src/assets/logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>后台管理系统</title>
   </head>
